.metadata/.plugins/org.eclipse.cdt.ui/global-build.log
17:11:52 **** Incremental Build of configuration Debug for project MECSOL2024 ****
make -j8 all 
arm-none-eabi-gcc "../Core/Src/mpu6050.c" -mcpu=cortex-m4 -std=gnu11 -g3 -DDEBUG -DUSE_HAL_DRIVER -DSTM32F411xE -c -I../Core/Inc -IC:/Users/ceccc/STM32Cube/Repository/STM32Cube_FW_F4_V1.28.0/Drivers/STM32F4xx_HAL_Driver/Inc -IC:/Users/ceccc/STM32Cube/Repository/STM32Cube_FW_F4_V1.28.0/Drivers/STM32F4xx_HAL_Driver/Inc/Legacy -IC:/Users/ceccc/STM32Cube/Repository/STM32Cube_FW_F4_V1.28.0/Drivers/CMSIS/Device/ST/STM32F4xx/Include -IC:/Users/ceccc/STM32Cube/Repository/STM32Cube_FW_F4_V1.28.0/Drivers/CMSIS/Include -O0 -ffunction-sections -fdata-sections -Wall -fstack-usage -fcyclomatic-complexity -MMD -MP -MF"Core/Src/mpu6050.d" -MT"Core/Src/mpu6050.o" --specs=nano.specs -mfpu=fpv4-sp-d16 -mfloat-abi=hard -mthumb -o "Core/Src/mpu6050.o"
../Core/Src/mpu6050.c: In function 'Calibration':
../Core/Src/mpu6050.c:234:54: error: invalid type argument of unary '*' (have 'float')
  234 |                 MPU6050_Read_All(*I2Cx, *DataStruct, *cX, *cY, *cZ);
      |                                                      ^~~
../Core/Src/mpu6050.c:234:59: error: invalid type argument of unary '*' (have 'float')
  234 |                 MPU6050_Read_All(*I2Cx, *DataStruct, *cX, *cY, *cZ);
      |                                                           ^~~
../Core/Src/mpu6050.c:234:64: error: invalid type argument of unary '*' (have 'float')
  234 |                 MPU6050_Read_All(*I2Cx, *DataStruct, *cX, *cY, *cZ);
      |                                                                ^~~
../Core/Src/mpu6050.c:234:34: error: incompatible type for argument 1 of 'MPU6050_Read_All'
  234 |                 MPU6050_Read_All(*I2Cx, *DataStruct, *cX, *cY, *cZ);
      |                                  ^~~~~
      |                                  |
      |                                  I2C_HandleTypeDef
../Core/Src/mpu6050.c:140:42: note: expected 'I2C_HandleTypeDef *' but argument is of type 'I2C_HandleTypeDef'
  140 | void MPU6050_Read_All(I2C_HandleTypeDef *I2Cx, MPU6050_t *DataStruct, float cX, float cY, float cZ) {
      |                       ~~~~~~~~~~~~~~~~~~~^~~~
../Core/Src/mpu6050.c:234:41: error: incompatible type for argument 2 of 'MPU6050_Read_All'
  234 |                 MPU6050_Read_All(*I2Cx, *DataStruct, *cX, *cY, *cZ);
      |                                         ^~~~~~~~~~~
      |                                         |
      |                                         MPU6050_t
../Core/Src/mpu6050.c:140:59: note: expected 'MPU6050_t *' but argument is of type 'MPU6050_t'
  140 | void MPU6050_Read_All(I2C_HandleTypeDef *I2Cx, MPU6050_t *DataStruct, float cX, float cY, float cZ) {
      |                                                ~~~~~~~~~~~^~~~~~~~~~
make: *** [Core/Src/subdir.mk:46: Core/Src/mpu6050.o] Error 1
"make -j8 all" terminated with exit code 2. Build might be incomplete.
18:28:04 **** Build of configuration Debug for project MECSOL2024 ****
make -j8 all 
arm-none-eabi-gcc "../Core/Src/mpu6050.c" -mcpu=cortex-m4 -std=gnu11 -g3 -DDEBUG -DUSE_HAL_DRIVER -DSTM32F411xE -c -I../Core/Inc -IC:/Users/ceccc/STM32Cube/Repository/STM32Cube_FW_F4_V1.28.0/Drivers/STM32F4xx_HAL_Driver/Inc -IC:/Users/ceccc/STM32Cube/Repository/STM32Cube_FW_F4_V1.28.0/Drivers/STM32F4xx_HAL_Driver/Inc/Legacy -IC:/Users/ceccc/STM32Cube/Repository/STM32Cube_FW_F4_V1.28.0/Drivers/CMSIS/Device/ST/STM32F4xx/Include -IC:/Users/ceccc/STM32Cube/Repository/STM32Cube_FW_F4_V1.28.0/Drivers/CMSIS/Include -O0 -ffunction-sections -fdata-sections -Wall -fstack-usage -fcyclomatic-complexity -MMD -MP -MF"Core/Src/mpu6050.d" -MT"Core/Src/mpu6050.o" --specs=nano.specs -mfpu=fpv4-sp-d16 -mfloat-abi=hard -mthumb -o "Core/Src/mpu6050.o"
arm-none-eabi-gcc "../Core/Src/usart.c" -mcpu=cortex-m4 -std=gnu11 -g3 -DDEBUG -DUSE_HAL_DRIVER -DSTM32F411xE -c -I../Core/Inc -IC:/Users/ceccc/STM32Cube/Repository/STM32Cube_FW_F4_V1.28.0/Drivers/STM32F4xx_HAL_Driver/Inc -IC:/Users/ceccc/STM32Cube/Repository/STM32Cube_FW_F4_V1.28.0/Drivers/STM32F4xx_HAL_Driver/Inc/Legacy -IC:/Users/ceccc/STM32Cube/Repository/STM32Cube_FW_F4_V1.28.0/Drivers/CMSIS/Device/ST/STM32F4xx/Include -IC:/Users/ceccc/STM32Cube/Repository/STM32Cube_FW_F4_V1.28.0/Drivers/CMSIS/Include -O0 -ffunction-sections -fdata-sections -Wall -fstack-usage -fcyclomatic-complexity -MMD -MP -MF"Core/Src/usart.d" -MT"Core/Src/usart.o" --specs=nano.specs -mfpu=fpv4-sp-d16 -mfloat-abi=hard -mthumb -o "Core/Src/usart.o"
../Core/Src/mpu6050.c: In function 'Calibration':
../Core/Src/mpu6050.c:234:34: error: incompatible type for argument 1 of 'MPU6050_Read_All'
  234 |                 MPU6050_Read_All(*I2Cx, *DataStruct, cX, cY, cZ);
      |                                  ^~~~~
      |                                  |
      |                                  I2C_HandleTypeDef
../Core/Src/mpu6050.c:140:42: note: expected 'I2C_HandleTypeDef *' but argument is of type 'I2C_HandleTypeDef'
  140 | void MPU6050_Read_All(I2C_HandleTypeDef *I2Cx, MPU6050_t *DataStruct, float cX, float cY, float cZ) {
      |                       ~~~~~~~~~~~~~~~~~~~^~~~
../Core/Src/mpu6050.c:234:41: error: incompatible type for argument 2 of 'MPU6050_Read_All'
  234 |                 MPU6050_Read_All(*I2Cx, *DataStruct, cX, cY, cZ);
      |                                         ^~~~~~~~~~~
      |                                         |
      |                                         MPU6050_t
../Core/Src/mpu6050.c:140:59: note: expected 'MPU6050_t *' but argument is of type 'MPU6050_t'
  140 | void MPU6050_Read_All(I2C_HandleTypeDef *I2Cx, MPU6050_t *DataStruct, float cX, float cY, float cZ) {
      |                                                ~~~~~~~~~~~^~~~~~~~~~
make: *** [Core/Src/subdir.mk:46: Core/Src/mpu6050.o] Error 1
make: *** Waiting for unfinished jobs....
"make -j8 all" terminated with exit code 2. Build might be incomplete.
18:28:59 **** Incremental Build of configuration Debug for project MECSOL2024 ****
make -j8 all 
arm-none-eabi-gcc "../Core/Src/mpu6050.c" -mcpu=cortex-m4 -std=gnu11 -g3 -DDEBUG -DUSE_HAL_DRIVER -DSTM32F411xE -c -I../Core/Inc -IC:/Users/ceccc/STM32Cube/Repository/STM32Cube_FW_F4_V1.28.0/Drivers/STM32F4xx_HAL_Driver/Inc -IC:/Users/ceccc/STM32Cube/Repository/STM32Cube_FW_F4_V1.28.0/Drivers/STM32F4xx_HAL_Driver/Inc/Legacy -IC:/Users/ceccc/STM32Cube/Repository/STM32Cube_FW_F4_V1.28.0/Drivers/CMSIS/Device/ST/STM32F4xx/Include -IC:/Users/ceccc/STM32Cube/Repository/STM32Cube_FW_F4_V1.28.0/Drivers/CMSIS/Include -O0 -ffunction-sections -fdata-sections -Wall -fstack-usage -fcyclomatic-complexity -MMD -MP -MF"Core/Src/mpu6050.d" -MT"Core/Src/mpu6050.o" --specs=nano.specs -mfpu=fpv4-sp-d16 -mfloat-abi=hard -mthumb -o "Core/Src/mpu6050.o"
../Core/Src/mpu6050.c: In function 'Calibration':
../Core/Src/mpu6050.c:227:17: warning: unused variable 't' [-Wunused-variable]
  227 |         int16_t t = 0;
      |                 ^
arm-none-eabi-gcc -o "MECSOL2024.elf" @"objects.list"   -mcpu=cortex-m4 -T"C:\Users\ceccc\Documents\GitHub\AST_MPU6050_STM32\MECSOL2024\STM32F411RETX_FLASH.ld" --specs=nosys.specs -Wl,-Map="MECSOL2024.map" -Wl,--gc-sections -static --specs=nano.specs -mfpu=fpv4-sp-d16 -mfloat-abi=hard -mthumb -u _printf_float -Wl,--start-group -lc -lm -Wl,--end-group
Finished building target: MECSOL2024.elf
 
arm-none-eabi-size  MECSOL2024.elf 
arm-none-eabi-objdump -h -S MECSOL2024.elf  > "MECSOL2024.list"
   text	   data	    bss	    dec	    hex	filename
  32164	    488	   3672	  36324	   8de4	MECSOL2024.elf
Finished building: default.size.stdout
 
Finished building: MECSOL2024.list
 
